--- a/chargement_elements.css
+++ b/chargement_elements.css
@@ -49,6 +49,7 @@
     justify-content: center;
     align-items: center;
     transition: opacity 0.5s ease;
+    z-index: 10;
 }
 
 .preload-finish {
